expand button hover area

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         .button {
             all: unset;
             position: relative;
+            height: 500px;
         }
 
         .button::after {
