--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@
         }
 
         #grid {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
             background-color: var(--board-color);
-            padding: 16px;
             border-radius: 16px;
             box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.5);
-            max-width: 800px;
+            /* max-width: 800px;
             width: 100%;
-            min-width: 550px;
+            min-width: 550px; */
         }
 
         #grid-top {
-            display: grid;
-            grid-template-columns: repeat(7, 1fr);
-            padding: 16px;
             height: 50px;
+        }
+
+        #grid, #grid-top {
+            padding: 16px;
+            grid-template-columns: repeat(7, 1fr);
+            display: grid;
+            width: 600px;
         }
 
         .grid-row {
@@ -106,37 +107,39 @@
 </head>
 
 <body>
-    <div id="grid-top">
-        <!-- Top row with buttons -->
-        <div id="input-row" class="grid-row">
-            <button id="column-1" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
-            <button id="column-2" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
-            <button id="column-3" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
-            <button id="column-4" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
-            <button id="column-5" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
-            <button id="column-6" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
-            <button id="column-7" class="button grid-cell">
-                <!-- <div class="tile">
-                </div> -->
-            </button>
+    <div class="center-container">
+        <div id="grid-top">
+            <!-- Top row with buttons -->
+            <div id="input-row" class="grid-row">
+                <button id="column-1" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+                <button id="column-2" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+                <button id="column-3" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+                <button id="column-4" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+                <button id="column-5" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+                <button id="column-6" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+                <button id="column-7" class="button grid-cell">
+                    <!-- <div class="tile">
+                    </div> -->
+                </button>
+            </div>
         </div>
     </div>
     <div class="center-container">
